// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | FlexTable Flex Table With Different Rows 1`] = `
.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c13 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c16 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c11 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c12 {
  width: inherit;
}

.c15 {
  overflow: hidden;
}

.c7 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c7 > *:first-child {
  padding-left: 0;
}

.c7 > *:last-child {
  padding-right: 0;
}

.c14 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c14:hover {
  background: #F5F5F5;
}

.c14 > *:first-child {
  padding-left: 0;
}

.c14 > *:last-child {
  padding-right: 0;
}

.c17 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c17:hover {
  background: #F5F5F5;
}

.c17 > *:first-child {
  padding-left: 0;
}

.c17 > *:last-child {
  padding-right: 0;
}

.c18 {
  background: #FFFFFF;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c18 > *:first-child {
  padding-left: 0;
}

.c18 > *:last-child {
  padding-right: 0;
}

.c19 {
  background: #FFFFFF;
  border-bottom: 1px solid #00C8F5;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c19:hover {
  background: #F5F5F5;
}

.c19 > *:first-child {
  padding-left: 0;
}

.c19 > *:last-child {
  padding-right: 0;
}

.c8 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c10 {
  overflow: hidden;
}

.c2 {
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  padding-left: 4px;
}

.c0 {
  background-color: #F5F5F5;
}

.c0:not(:last-of-type) {
  margin-bottom: 40px;
}

.c3:not(:last-of-type) {
  margin-bottom: 40px;
}

@media (min-width:760px) {
  .c1 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    FlexTable With Different Rows
  </span>
  <div
    className="c2 c3"
    role="table"
  >
    <div
      className="c4"
    >
      <span
        className="c1 c5"
      />
    </div>
    <div
      className="c6 c7 c8"
      role="row"
    >
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 1
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 2
          </span>
        </div>
      </div>
      <div
        className="c9 c10"
        role="columnheader"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c13"
          >
            Header 3
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c14"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Default
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c7"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c17"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c18"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            No highlight and separator hidden
          </span>
        </div>
      </div>
    </div>
    <div
      className="c6 c19"
      role="row"
    >
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
      <div
        className="c9 c15"
        role="cell"
      >
        <div
          className="c11 c12"
        >
          <span
            className="c16"
          >
            Separator color set
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | FlexTable Table Custom Data Cells 1`] = `
.c24 {
  height: 20px;
  box-sizing: border-box;
  display: block;
  width: 26.666666666666668px;
  overflow: hidden;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c12 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 0 0 150px;
  -ms-flex: 0 0 150px;
  flex: 0 0 150px;
}

.c14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  box-sizing: border-box;
}

.c20 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c18 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #6E6E69;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: inline-block;
  vertical-align: middle;
}

.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 18px;
  line-height: 1.3333333333333333;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #6E6E69;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c23 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c27 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c9 {
  display: inline-block;
  width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: 0;
}

.c10 {
  width: inherit;
}

.c22 {
  overflow: hidden;
}

.c5 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c5 > *:first-child {
  padding-left: 0;
}

.c5 > *:last-child {
  padding-right: 0;
}

.c21 {
  background: #FFFFFF;
  border-bottom: 1px solid #EBEBE8;
  padding-right: 4px;
  padding-left: 2px;
  border-left: 2px solid transparent;
  padding-top: 4px;
  padding-bottom: 4px;
  margin-right: 0;
  margin-left: 0;
}

.c21:hover {
  background: #F5F5F5;
}

.c21 > *:first-child {
  padding-left: 0;
}

.c21 > *:last-child {
  padding-right: 0;
}

.c6 {
  z-index: 1;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  border-bottom: 1px solid #282823;
}

.c25 {
  border-top: 1px solid #282823;
  border-bottom: 0;
}

.c19 {
  margin-left: 4px;
}

.c13 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  width: 100%;
}

.c8 {
  overflow: hidden;
}

.c26 {
  overflow: hidden;
}

.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  padding-left: 4px;
}

.c15 {
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
}

@media (min-width:760px) {
  .c2 {
    font-size: 20px;
    line-height: 1.2;
  }
}

<div
  className="c0"
  role="table"
>
  <div
    className="c1"
  >
    <span
      className="c2 c3"
    />
  </div>
  <div
    className="c4 c5 c6"
    role="row"
  >
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Date
        </span>
      </div>
    </div>
    <div
      aria-sort="none"
      className="c12 c8"
      role="columnheader"
    >
      <a
        className="c13"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <div
          className="c14 c15"
        >
          <div
            className="c16 c17"
          >
            <div
              className="c9 c10"
            >
              <span
                className="c11"
              >
                Transferable Quantity
              </span>
            </div>
          </div>
          <div
            className="c16"
          >
            <span
              className="c11"
            >
              USD
            </span>
          </div>
          <div
            className="c16"
          >
            <svg
              aria-hidden="true"
              className="c18 c19"
              focusable="false"
              preserveAspectRatio="xMidYMid meet"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <polygon
                points="19.969 4 24 8.027 12 20 0 8.027 4.031 4 12 11.952"
              />
            </svg>
          </div>
        </div>
      </a>
    </div>
    <div
      className="c7 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Country
        </span>
      </div>
    </div>
    <div
      className="c20 c8"
      role="columnheader"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c11"
        >
          Percentage
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c21"
    role="row"
  >
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c12 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          300
        </span>
      </div>
    </div>
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <svg
            className="c24"
            focusable="false"
            role="img"
            viewBox="0 0 640 480"
          >
            <g
              transform="translate(50.082) scale(.9375)"
            >
              <g
                fillRule="evenodd"
                strokeWidth="1pt"
              >
                <path
                  d="M-121.103.302h256V205.1h-256zM-121.103 307.178h256v204.8h-256z"
                  fill="#006aa7"
                />
                <path
                  d="M-121.103 204.984h256v102.4h-256z"
                  fill="#fecc00"
                />
                <path
                  d="M133.843.01h102.4v511.997h-102.4z"
                  fill="#fecc00"
                />
                <path
                  d="M232.995 205.013h460.798v102.4H232.995z"
                  fill="#fecc00"
                />
                <path
                  d="M236.155 307.208h460.797v204.799H236.155zM236.155.302h460.797V205.1H236.155z"
                  fill="#006aa7"
                />
              </g>
            </g>
            <title>
              Sweden
            </title>
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c20 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          75
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c21"
    role="row"
  >
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          <time>
            7/10/2020, 12:53
          </time>
        </span>
      </div>
    </div>
    <div
      className="c12 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          100
        </span>
      </div>
    </div>
    <div
      className="c7 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        />
      </div>
    </div>
    <div
      className="c20 c22"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c23"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
  <div
    className="c4 c5 c25"
    role="row"
  >
    <div
      className="c7 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        />
      </div>
    </div>
    <div
      className="c12 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        >
          
          400
        </span>
      </div>
    </div>
    <div
      className="c7 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        />
      </div>
    </div>
    <div
      className="c20 c26"
      role="cell"
    >
      <div
        className="c9 c10"
      >
        <span
          className="c27"
        >
          
          25
          %
        </span>
      </div>
    </div>
  </div>
</div>
`;
